--- a/index.html
+++ b/index.html
@@ -1,46 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SHARIQ — Web Developer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Shariq Shahid | INTERNET BREAKER PORTFOLIO</title>
 
+<!-- ================== LIBRARIES ================== -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
 
+<!-- ================== STYLES ================== -->
 <style>
-:root{
-  --primary:#6c7cff;
-  --accent:#00f7ff;
-  --bg:#0b0f19;
-  --card:#12182b;
-  --text:#eaeaf0;
-}
 
-/* BASE */
-html{scroll-behavior:smooth}
+/* ===== GLOBAL ===== */
+*{margin:0;padding:0;box-sizing:border-box;scroll-behavior:smooth}
 body{
-  font-family:Poppins,system-ui,sans-serif;
-  background:var(--bg);
-  color:var(--text);
+  font-family:'Segoe UI',sans-serif;
+  background:#000;
+  color:#e6faff;
+  overflow-x:hidden;
 }
 
-/* NAVBAR */
-.navbar{
-  background:rgba(11,15,25,.9);
-  backdrop-filter:blur(10px);
+section{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:80px 20px;
+  position:relative;
 }
-.navbar-brand{font-weight:700;color:var(--primary)!important}
-.nav-link{color:#ddd!important}
-.nav-link:hover{color:var(--accent)!important}
 
-/* HERO */
-.hero{
-  background:linear-gradient(135deg,#6c7cff,#1b2a6b,#0b0f19);
-  background-size:300% 300%;
+canvas{
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:-2;
+}
+
+/* ===== GRADIENT ANIMATION ===== */
+.gradient-text{
+  background:linear-gradient(45deg,#00f5ff,#7b2ff7,#00ffa3,#ff00c8);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  background-size:400% 400%;
   animation:gradientMove 10s ease infinite;
-  padding:110px 0;
-  text-align:center;
 }
 @keyframes gradientMove{
   0%{background-position:0% 50%}
@@ -48,262 +53,305 @@ body{
   100%{background-position:0% 50%}
 }
 
-/* TEXT LOAD ANIMATION */
-.text-animate{
-  opacity:0;
-  transform:translateY(25px);
-  animation:textReveal .9s ease forwards;
+/* ===== GLASS EFFECT ===== */
+.glass{
+  background:rgba(255,255,255,0.05);
+  backdrop-filter:blur(25px);
+  border-radius:30px;
+  padding:60px;
+  border:1px solid rgba(255,255,255,0.15);
+  box-shadow:0 0 50px rgba(0,255,255,0.15);
+  transition:0.6s;
 }
-.text-delay-1{animation-delay:.3s}
-.text-delay-2{animation-delay:.6s}
-
-@keyframes textReveal{
-  to{opacity:1;transform:none}
-}
-
-/* SCROLL ANIMATION */
-.fade-up{
-  opacity:0;
-  transform:translateY(40px);
-  transition:.9s ease;
-}
-.fade-up.show{
-  opacity:1;
-  transform:none;
+.glass:hover{
+  transform:translateY(-20px) scale(1.03);
+  box-shadow:0 0 80px rgba(0,255,255,0.3);
 }
 
-/* RGB GLOW */
-.rgb{
-  position:relative;
+/* ===== HERO ===== */
+.hero-title{
+  font-size:60px;
+  font-weight:bold;
 }
-.rgb::after{
-  content:"";
-  position:absolute;
-  inset:-2px;
-  border-radius:inherit;
-  background:linear-gradient(120deg,#ff4ecd,#6c7cff,#00f7ff);
-  filter:blur(18px);
-  opacity:0;
-  transition:.4s;
-  z-index:-1;
-}
-.rgb:hover::after{opacity:.45}
-
-
-/* PROJECT LINK */
-.project-link{
-  text-decoration:none;
-  color:inherit;
-  display:block;
+.typing{
+  font-size:28px;
+  height:40px;
 }
 
+/* ===== BUTTON ===== */
+.btn-glow{
+  background:linear-gradient(45deg,#00f5ff,#7b2ff7);
+  border:none;
+  padding:14px 35px;
+  border-radius:40px;
+  color:#fff;
+  font-weight:bold;
+  transition:0.4s;
+}
+.btn-glow:hover{
+  box-shadow:0 0 40px #00f5ff;
+}
+
+/* ===== SKILLS ===== */
+.skill-card{
+  border:1px solid #00f5ff;
+  padding:20px;
+  margin:15px;
+  border-radius:20px;
+  transition:0.5s;
+}
+.skill-card:hover{
+  background:#00f5ff;
+  color:#000;
+  transform:rotateY(15deg) scale(1.1);
+}
+
+/* ===== PROJECT CARDS ===== */
 .project-card{
-  cursor:pointer;
+  border:1px solid rgba(0,255,255,0.3);
+  padding:30px;
+  border-radius:20px;
+  transition:0.6s;
+}
+.project-card:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 40px rgba(0,255,255,0.5);
 }
 
-.project-card:hover .view-text{
-  color:var(--accent);
+/* ===== CHATBOT ===== */
+#chat-toggle{
+  position:fixed;
+  bottom:25px;
+  right:25px;
+  width:70px;
+  height:70px;
+  border-radius:50%;
+  border:none;
+  background:#00f5ff;
+  font-size:24px;
+  z-index:999;
 }
 
-.view-text{
-  display:inline-block;
-  margin-top:10px;
-  font-weight:600;
-  color:#bfc6ff;
-  transition:.3s;
+#chatbot{
+  position:fixed;
+  bottom:110px;
+  right:25px;
+  width:320px;
+  background:#111;
+  border-radius:20px;
+  display:none;
+  flex-direction:column;
+  overflow:hidden;
+  box-shadow:0 0 30px rgba(0,255,255,0.4);
+}
+#chatbot-header{
+  background:#00f5ff;
+  color:#000;
+  padding:10px;
+  font-weight:bold;
+}
+#chatbot-messages{
+  height:220px;
+  overflow-y:auto;
+  padding:10px;
+  font-size:14px;
+}
+#chatbot-input{
+  display:flex;
+}
+#chatbot-input input{
+  flex:1;
+  border:none;
+  padding:10px;
+}
+#chatbot-input button{
+  border:none;
+  background:#00f5ff;
 }
 
-
-
-/* CARDS */
-.card-ui{
-  background:var(--card);
-  border-radius:18px;
-  padding:26px;
-  box-shadow:0 15px 40px rgba(0,0,0,.5);
-  transition:.4s;
+/* ===== FLOATING ANIMATION ===== */
+.float{
+  animation:float 6s ease-in-out infinite;
 }
-.card-ui:hover{
-  transform:translateY(-8px);
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-20px)}
 }
 
-/* SKILLS */
-.skill{
-  background:#0f1528;
-  padding:.55rem .9rem;
-  border-radius:10px;
-  margin:.3rem;
-  display:inline-flex;
-  align-items:center;
-  gap:.45rem;
-  transition:.35s ease;
-  cursor:pointer;
-}
-.skill:hover{
-  transform:translateY(-6px) scale(1.05);
-  box-shadow:0 0 18px rgba(108,124,255,.45);
-}
-
-/* CV */
-.cv-img{
-  width:100%;
-  border-radius:18px;
-  box-shadow:0 20px 60px rgba(0,0,0,.6);
-}
-
-
-.contact-link{
-  color:inherit;
-  text-decoration:none;
-  transition:.3s;
-}
-
-.contact-link:hover{
-  color:var(--accent);
-}
-
-
-/* FOOTER */
-footer{
-  background:#060912;
-  padding:2rem 0;
-}
 </style>
 </head>
-
 <body>
 
-<!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg fixed-top">
+<!-- ================== 3D GALAXY CANVAS ================== -->
+<canvas id="bg"></canvas>
+
+<!-- ================== HERO SECTION ================== -->
+<section>
+<div class="text-center glass" data-tilt>
+<img src="shariq.png" width="180" class="rounded-circle mb-4 float" alt="Shariq">
+<h1 class="hero-title gradient-text">SHARIQ SHAHID</h1>
+<div class="typing gradient-text" id="typing"></div>
+<p class="mt-3">Software Engineering Graduate | Future AI/ML Engineer</p>
+<a href="cv.pdf" class="btn btn-glow m-2" download>Download CV</a>
+<a href="contact" class="btn btn-outline-light m-2">Hire Me</a>
+</div>
+</section>
+
+<!-- ================== SKILLS ================== -->
+<section>
+<div class="glass text-center" data-tilt>
+<h2 class="gradient-text mb-4">Elite Skills</h2>
+<div class="row">
+<div class="col-md-3 skill-card">HTML</div>
+<div class="col-md-3 skill-card">CSS</div>
+<div class="col-md-3 skill-card">JavaScript</div>
+<div class="col-md-3 skill-card">Bootstrap</div>
+<div class="col-md-3 skill-card">jQuery</div>
+<div class="col-md-3 skill-card">MySQL</div>
+<div class="col-md-3 skill-card">JSON / XML</div>
+<div class="col-md-3 skill-card">Data Analytics</div>
+<div class="col-md-3 skill-card">PHP</div>
+<div class="col-md-3 skill-card">Microsoft Office</div>
+</div>
+</div>
+</section>
+
+<!-- ================== PROJECTS ================== -->
+<section>
 <div class="container">
-<a class="navbar-brand" href="index.html">SHARIQ SHAHID</a>
-<button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div id="nav" class="collapse navbar-collapse">
-<ul class="navbar-nav ms-auto">
-<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-<li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-<li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-<li class="nav-item"><a class="nav-link" href="#cv">CV</a></li>
-<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-</ul>
+<div class="row g-4">
+
+<div class="col-md-4">
+<div class="project-card glass" data-tilt>
+<h5>Alpha Expenses</h5>
+<a href="https://alpha-expenses.netlify.app/" target="_blank">alpha-expenses</a>
 </div>
 </div>
-</nav>
 
-<!-- HERO -->
-<header class="hero">
-<div class="container">
-<h1 class="fw-bold text-animate">Hi, I’m <span class="text-warning">SHARIQ</span></h1>
-<p class="lead text-animate text-delay-1">Modern Web Developer — Responsive, Website Design</p>
-<div class="text-animate text-delay-2">
-<a href="#projects" class="btn btn-light rgb me-2">Projects</a>
-<a href="#cv" class="btn btn-outline-light">View CV</a>
+<div class="col-md-4">
+<div class="project-card glass" data-tilt>
+<h5>PrettyDecoded</h5>
+<a href="https://prettydecoded.netlify.app/" target="_blank">PrettyDecoded</a>
 </div>
 </div>
-</header>
 
-<main class="py-5 mt-5">
-
-<!-- ABOUT -->
-<section id="about" class="container mb-5 fade-up">
-<h2 class="fw-bold text-primary">About Me</h2>
-<p>
-I am a passionate Web Developer specializing in modern, responsive websites using 
-HTML, CSS, JavaScript, and Bootstrap. I focus on clean design, smooth user experience, 
-and continuous learning to deliver high-quality web solutions.
-</p>
-</section>
-
-<!-- SKILLS -->
-<section id="skills" class="container mb-5 fade-up">
-<h2 class="fw-bold text-primary">Skills</h2>
-<div>
-<span class="skill"><i class="fa-brands fa-html5 text-danger"></i> HTML</span>
-<span class="skill"><i class="fa-brands fa-css3-alt text-info"></i> CSS</span>
-<span class="skill"><i class="fa-brands fa-js text-warning"></i> JavaScript</span>
-<span class="skill"><i class="fa-brands fa-bootstrap text-purple"></i> Bootstrap</span>
+<div class="col-md-4">
+<div class="project-card glass" data-tilt>
+<h5>Lively Bubblegum</h5>
+<a href="https://lively-bubblegum-dbad9a.netlify.app/" target="_blank">Banking Application</a>
 </div>
-</section>
+</div>
 
-
-<section id="projects" class="container mb-5 fade-up">
-  <h2 class="fw-bold text-primary">Projects</h2>
-
-  <div class="row g-4">
-    <div class="col-md-6">
-
-      <!-- PROJECT CARD -->
-      <a href="https://shariq-10.github.io/Marciado-Park/" target="_blank" class="project-link">
-        <div class="card-ui rgb project-card">
-          <h5>Business Website</h5>
-          <p>Marciado  Amusement Park</p>
-          <span class="view-text">
-            View Project <i class="fa-solid fa-arrow-right ms-1"></i>
-          </span>
-        </div>
-      </a>
-
-    </div>
-  </div>
-</section>
-
-
-<!-- CV -->
-<section id="cv" class="container mb-5 fade-up">
-<h2 class="fw-bold text-primary">These My CV</h2>
-<div class="row align-items-center g-4">
 <div class="col-md-6">
-<p>Below is my complete resume highlighting my skills and experience.</p>
-<a href="https://airforshare.com/files/JiBFnW.png" download class="btn btn-primary rgb">
-  Download CV
-</a>
+<div class="project-card glass" data-tilt>
+<h5>School Website</h5>
+<a href="https://shariq-10.github.io/School-Website/" target="_blank">School-Website</a>
 </div>
+</div>
+
 <div class="col-md-6">
-<img src="https://airforshare.com/files/JiBFnW.png" class="cv-img" alt="My CV">
+<div class="project-card glass" data-tilt>
+<h5>Marciado Park</h5>
+<a href="https://shariq-10.github.io/Marciado-Park/" target="_blank">Park Website</a>
+</div>
+</div>
+
 </div>
 </div>
 </section>
 
-<!-- CONTACT -->
-<section id="contact" class="container fade-up">
-  <h2 class="fw-bold text-primary">Contact</h2>
-
-  <p>
-    <i class="fa-solid fa-envelope me-2"></i>
-    <a href="mailto:dsgg46986@gmail.com" class="contact-link">
-      dsgg46986@gmail.com
-    </a>
-  </p>
-
-  <p>
-    <i class="fa-brands fa-github me-2"></i>
-    <a href="https://github.com/Shariq-10" target="_blank" class="contact-link">
-      github.com/Shariq-10
-    </a>
-  </p>
+<!-- ================== CONTACT ================== -->
+<section id="contact">
+<div class="glass text-center" data-tilt>
+<h2 class="gradient-text">Contact Me</h2>
+<a href="dsgg46986@gmail.com"><p><i class="fa-solid fa-envelope"></i> dsgg46986@gmail.com</p></a>
+<a href="+923142048826"><p><i class="fa-brands fa-whatsapp"></i> +923142048826</p></a>
+<a href="https://www.linkedin.com/in/shariq-shahid-872bb7377/?trk=PROFILE_TOP_CARD_OPEN_TO_ENROLLED"><p><i class="fa-brands fa-linkedin"></i> https://www.linkedin.com/in/shariq-shahid</p></a>
+<a href="https://github.com/Shariq-10"><p><i class="fa-brands fa-github"></i> https://github.com/Shariq-10</p></a>
+</div>
 </section>
 
+<!-- ================== CHATBOT ================== -->
+<button id="chat-toggle">💬</button>
+<div id="chatbot">
+<div id="chatbot-header">AI Assistant</div>
+<div id="chatbot-messages">Hi 👋 Ask about Shariq's skills or projects.</div>
+<div id="chatbot-input">
+<input type="text" id="chat-input" placeholder="Ask something...">
+<button onclick="sendMsg()">➤</button>
+</div>
+</div>
 
-</main>
-
-<footer class="text-center">
-<p>© <span id="year"></span> SHARIQ — Dark Premium Portfolio</p>
-</footer>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-
+<!-- ================== SCRIPTS ================== -->
 <script>
-document.getElementById("year").textContent=new Date().getFullYear();
 
-const observer=new IntersectionObserver(entries=>{
-entries.forEach(e=>{
-if(e.isIntersecting){e.target.classList.add("show")}
-})
-},{threshold:.15});
+/* ===== TYPING EFFECT ===== */
+const texts=["Front End Developer","Data Analyst","Future AI/ML Engineer","Creative UI Specialist"];
+let count=0,index=0,currentText='',letter='';
+(function type(){
+ if(count===texts.length){count=0}
+ currentText=texts[count];
+ letter=currentText.slice(0,++index);
+ document.getElementById('typing').textContent=letter;
+ if(letter.length===currentText.length){count++;index=0;setTimeout(type,1500)}
+ else{setTimeout(type,100)}
+})();
 
-document.querySelectorAll(".fade-up").forEach(el=>observer.observe(el));
+/* ===== THREE JS GALAXY ===== */
+const canvas=document.getElementById('bg');
+const scene=new THREE.Scene();
+const camera=new THREE.PerspectiveCamera(75,window.innerWidth/window.innerHeight,0.1,1000);
+const renderer=new THREE.WebGLRenderer({canvas,alpha:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
+camera.position.z=5;
+
+const starsGeometry=new THREE.BufferGeometry();
+const starCount=8000;
+const posArray=new Float32Array(starCount*3);
+for(let i=0;i<starCount*3;i++){posArray[i]=(Math.random()-0.5)*2000}
+starsGeometry.setAttribute('position',new THREE.BufferAttribute(posArray,3));
+const starsMaterial=new THREE.PointsMaterial({size:0.7,color:0x00f5ff});
+const stars=new THREE.Points(starsGeometry,starsMaterial);
+scene.add(stars);
+
+function animate(){requestAnimationFrame(animate);stars.rotation.y+=0.0008;renderer.render(scene,camera);}animate();
+
+/* ===== TILT ===== */
+VanillaTilt.init(document.querySelectorAll("[data-tilt]"),{max:25,speed:500,glare:true,"max-glare":0.4});
+
+/* ===== CHATBOT ===== */
+const chat=document.getElementById('chatbot');
+document.getElementById('chat-toggle').onclick=()=>{
+ chat.style.display=chat.style.display==='flex'?'none':'flex';
+ chat.style.flexDirection='column';
+}
+
+function sendMsg(){
+ const input=document.getElementById('chat-input');
+ const msg=input.value;
+ const box=document.getElementById('chatbot-messages');
+ box.innerHTML+='<br><b>You:</b> '+msg;
+ if(msg.toLowerCase().includes('skills')){
+  box.innerHTML+='<br><b>AI:</b> Shariq is expert in Frontend Development & Data Analytics.';
+ }
+ else if(msg.toLowerCase().includes('projects')){
+  box.innerHTML+='<br><b>AI:</b> Check the projects section above for live demos.';
+ }
+ else{
+  box.innerHTML+='<br><b>AI:</b> Thank you for visiting the Ultra Portfolio!';
+ }
+ input.value='';
+ box.scrollTop=box.scrollHeight;
+}
+
+/* ===== AI VOICE INTRO ===== */
+window.onload=function(){
+ const msg=new SpeechSynthesisUtterance("Welcome to Shariq Shahid Internet Breaker Portfolio Experience");
+ msg.rate=1;
+ msg.pitch=1.1;
+ speechSynthesis.speak(msg);
+}
+
 </script>
 
 </body>
